# engawa

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile
.claude/commands/: new-adapter.md
.github/workflows/: ci.yml
adapters/sqlite/: Package.swift  README.md  spec.md
adapters/sqlite/conformance/: sqlite.test.js
adapters/sqlite/hosts/linux/: README.md  SqliteAdapter.cpp  deps.cmake
adapters/sqlite/hosts/macos/Sources/EngawaSQLite/: SqliteAdapter.swift
adapters/sqlite/hosts/windows/: README.md  deps.cmake
adapters/sqlite/js/: index.js
adapters/update/: Package.swift  README.md  spec.md
adapters/update/conformance/: update.test.js
adapters/update/hosts/linux/: README.md  UpdateAdapter.cpp
adapters/update/hosts/macos/Sources/EngawaUpdate/: UpdateAdapter.swift
adapters/update/hosts/windows/: README.md  UpdateAdapter.cpp
adapters/update/js/: index.js
cli/: README.md  package-lock.json  package.json  tsconfig.json
cli/src/: args.ts  crypto.ts  exec.ts  host.ts  log.ts  main.ts  manifest.ts  paths.ts
cli/src/commands/: build.ts  dev.ts  info.ts  keygen.ts  new.ts  sign.ts
cli/templates/minimal/: README.md  engawa.json
cli/templates/minimal/app/: index.html  main.js
cli/templates/sqlite/: README.md  engawa.json
cli/templates/sqlite/app/: index.html  main.js
cli/templates/static/: README.md
cli/templates/static/app/: index.html  main.js  style.css
cli/templates/updatable/: README.md
cli/templates/updatable/app/: index.html  main.js  style.css
cli/test/: compose.test.ts  new.test.ts
conformance/: README.md  harness.js  run.js
conformance/fixtures/bundle/: engawa.json
conformance/fixtures/minimal/: engawa.json
conformance/hosts/linux/: driver.js
conformance/hosts/macos/: driver.js
conformance/hosts/mock/: host.js
conformance/hosts/windows/: driver.js
conformance/suite/: app.test.js  binaryio.test.js  capabilities.test.js  clipboard.test.js  composition.test.js  crash.test.js  csp.test.js  dialog.test.js  echo.test.js  engine.test.js  fs.test.js  index.js  injection.test.js  limits.test.js  notification.test.js  numeric.test.js  path.test.js  process.test.js  shellOpen.test.js  storage.test.js  tray.test.js  window.test.js
docs/: design.md
examples/files/: engawa.json
examples/files/app/: files.js  index.html
examples/gallery/: README.md  engawa.json
examples/gallery/app/: gallery.css  gallery.js  index.html
examples/notes/: README.md  engawa.json
examples/notes/app/: index.html  notes.js
examples/notes/gate/: crypto.js  gate.ps1  gate.sh
hosts/linux/: CMakeLists.txt  README.md  build.sh  engawa-host.cmake
hosts/linux/src/: Adapter.hpp  Bootstrap.cpp  Bootstrap.hpp  Bridge.cpp  Bridge.hpp  Compose.cpp  ConformanceChannel.cpp  ConformanceChannel.hpp  Contract.hpp  Crypto.cpp  Crypto.hpp  EngineFloor.hpp  HostOptions.cpp  HostOptions.hpp  IoChannel.cpp  IoChannel.hpp  Json.hpp  NativeToast.cpp  NativeToast.hpp  PathUtil.hpp  SchemeHandler.cpp  SchemeHandler.hpp  UpdateHost.cpp  UpdateHost.hpp  Utf.hpp  Window.cpp  Window.hpp  main.cpp
hosts/linux/src/adapters/: Adapters.hpp  AppAdapter.cpp  ClipboardAdapter.cpp  DialogAdapter.cpp  EchoAdapter.cpp  FsAdapter.cpp  NotificationAdapter.cpp  PathAdapter.cpp  ProcessAdapter.cpp  ShellOpenAdapter.cpp
hosts/macos/: Package.swift  README.md
hosts/macos-kit/: Package.swift
hosts/macos-kit/Sources/EngawaKit/: Adapter.swift  JSONValue.swift  UpdateHost.swift
hosts/macos/EngawaKit/: Package.swift
hosts/macos/EngawaKit/Sources/EngawaKit/: Adapter.swift  JSONValue.swift
hosts/macos/Sources/EngawaHost/: Adapter.swift  AppAdapter.swift  AppSchemeHandler.swift  ClipboardAdapter.swift  DialogAdapter.swift  EchoAdapter.swift  EngawaHost.swift  FsAdapter.swift  JSONValue.swift  Manifest.swift  NotificationAdapter.swift  PathAdapter.swift  ProcessAdapter.swift  ShellOpenAdapter.swift  SlotManager.swift  WindowAdapter.swift  WindowController.swift  main.swift
hosts/macos/Sources/EngawaHostCore/: AppSchemeHandler.swift  EngawaHost.swift  EngawaRuntime.swift  FsAdapter.swift  IoTokenStore.swift  Manifest.swift  NotificationAdapter.swift  ProcessAdapter.swift  ShellOpenAdapter.swift  SlotManager.swift  TrayAdapter.swift  Util.swift  WindowAdapter.swift  WindowController.swift
hosts/windows/: CMakeLists.txt  README.md  THIRD_PARTY.md  build.ps1  cmake-build.ps1  engawa-host.cmake
hosts/windows/src/: Bootstrap.cpp  Bootstrap.hpp  Bridge.cpp  Bridge.hpp  Compose.cpp  Compose.hpp  ConformanceChannel.cpp  ConformanceChannel.hpp  Contract.hpp  Crypto.cpp  Crypto.hpp  Dispatcher.cpp  Dispatcher.hpp  EngineFloor.cpp  EngineFloor.hpp  HostOptions.cpp  HostOptions.hpp  IoChannel.cpp  Json.hpp  Mime.hpp  NativeToast.cpp  NativeToast.hpp  PathUtil.hpp  SchemeHandler.cpp  SchemeHandler.hpp  UpdateHost.cpp  UpdateHost.hpp  Utf.hpp  Window.cpp  Window.hpp  main.cpp
hosts/windows/src/adapters/: Adapters.hpp  AppAdapter.cpp  ClipboardAdapter.cpp  DialogAdapter.cpp  FsAdapter.cpp  NotificationAdapter.cpp  PathAdapter.cpp  ProcessAdapter.cpp  ShellOpenAdapter.cpp  WindowAdapter.cpp
hosts/windows/test/: native_smoke.cpp  smoke.ps1
shell-js/: README.md  shell.js
spec/: assets.md  contract.md  errors.md
spec/commands/: README.md  app.md  clipboard.md  dialog.md  fs.md  notification.md  path.md  process.md  shellOpen.md  tray.md  window.md
